# swrt-gpl

./: .gitignore  README.TXT  README.md  README_en.md
release/src-lantiq/grx500/switch_cli/source/: ChangeLog  Makefile.am  autogen.sh  configure.in
release/src-lantiq/grx500/switch_cli/source/src/: Makefile_test  gsw_cli_adap.c  gsw_cli_fkts_common.c  gsw_cli_fkts_flow.c  gsw_cli_mac.c  gsw_cli_mac.h  gsw_cli_macsec.c  gsw_cli_macsec.h  gsw_tbl.c  ltq_cli_dump_call.c  ltq_cli_lib.h  swapi_cli.c
release/src-lantiq/grx500/switch_cli/src/: Makefile.am  Makefile.in  gsw_cli_fkts.c  gsw_cli_fkts.h  gsw_cli_lmac.c  gsw_tbl.h  ltq_cli_lib.c
release/src-lantiq/grx500/swpal_6x/source/src/: Makefile.am  configure.ac  uci_wrapper.c
release/src-lantiq/grx500/swpal_6x/source/src/lite_nc/: nc_lite.c
release/src-qca-ipq807x/ipq807x/libroxml/source/: CMakeLists.txt  Makefile.am  configure  configure.ac  libroxml.pc.in
release/src-qca-ipq807x/ipq807x/libroxml/source/data/html/: libroxml-footer.html  libroxml-header.html
release/src-qca-ipq807x/ipq807x/libroxml/source/docs/: doxy.cfg  man.cfg.in  roxml.1
release/src-qca-ipq807x/ipq807x/libroxml/source/fuse.xml/: README
release/src-qca-ipq807x/ipq807x/libroxml/source/src/: config.h.in  roxml.h  roxml_buff.h  roxml_core.c  roxml_core.h  roxml_defines.h  roxml_doxy.h.in  roxml_file.c  roxml_file.h  roxml_internal.h  roxml_mem.c  roxml_parser.c  roxml_shell.c  roxml_stub.c  roxml_tune.h  roxml_types.h  roxml_utils.h  roxml_win32_native.h  roxml_xpath.h
release/src/router/ethtool-3.7/: AUTHORS  Makefile.am  Makefile.in  NEWS  configure  configure.ac  e100.c  e1000.c  et131x.c  ethtool-config.h.in  ethtool-copy.h  ethtool.8  ethtool.8.in  ethtool.c  ethtool.spec  ibm_emac.c  internal.h  ixgbe.c  ixp4xx.c  marvell.c  natsemi.c  realtek.c  rxclass.c  sfc.c  sfpdiag.c  sfpid.c  test-cmdline.c  test-common.c  test-features.c
release/src/router/libuci/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  blob.c  cli.c  delta.c  file.c  kaanna.sh  libuci.c  list.c  parse.c  uci.h  uci_blob.h  uci_config.h.in  uci_internal.h  ucimap-example.c  ucimap.c  ucimap.h  util.c
release/src/router/libuci/lua/: CMakeLists.txt  uci.c
release/src/router/libuci/sh/: uci.sh
release/src/router/libuci/test/: Makefile  tests.sh
release/src/router/libuci/test/config/: network
release/src/router/libuci/test/references/: add_section.result  export.result  get.data  get_parsing.data  import.data  import.result  set_named_section.result  set_nonexisting_option.result  ucimap_example_1.result
release/src/router/libuci/test/shunit2/: ._shunit2
release/src/router/libuci/test/tests.d/: 000_import  010_export  020_get  030_set  040_add  050_show  060-ucimap_example
release/src/router/libuci/tests/: CMakeLists.txt
release/src/router/libuci/tests/cram/: CMakeLists.txt  test-san_uci_import.t  test_uci_import.t  test_ucilua.t  test_ucilua_testcases.t
release/src/router/libuci/tests/cram/config/: broken  network
release/src/router/libuci/tests/cram/lua/: basic.lua
release/src/router/libuci/tests/fuzz/: CMakeLists.txt  test-fuzz.c
release/src/router/libuci/tests/fuzz/corpus/: id-000000,sig-06,src-000079,time-22005942,op-ext_AO,pos-8  id:000000,sig:11,src:000001,op:flip1,pos:24  id:000008,sig:11,src:000022,op:arith8,pos:42,val:+26
release/src/router/libuci/tests/fuzz/dict/: uci.dict
release/src/router/libuci/tests/fuzz/inputs/: dhcp
release/src/router/libuci/tests/shunit2/: CMakeLists.txt  README  tests.sh
release/src/router/libuci/tests/shunit2/references/: add_list_changes.result  add_list_config.result  add_list_show.result  add_section.result  batch_set.result  cli.options.delta.commit.result  cli.options.delta.export.result  del_list_config.result  del_list_multiline_config.result  export.data  export.result  get_multiline.data  import.data  import.result  revert_option.result  revert_option_multiline.result  set_existing_option.data  set_existing_option_multiline.result  set_named_section.result  set_nonexisting_option.data  set_nonexisting_option.result  show_parsing_multiline.data  (+4 more)
release/src/router/ltrace/: CREDITS  Makefile.am  NEWS  README  TODO  autogen.sh  backend.h  bits.c  bits.h  breakpoint.h  breakpoints.c  callback.h  common.h  configure.ac  debug.c  debug.h  defs.h  demangle.c  demangle.h  dict.c  dict.h  dwarf_prototypes.c  dwarf_prototypes.h  execute_program.c  expr.c  expr.h  fetch.c  fetch.h  filter.c  filter.h  forward.h  glob.c  glob.h  handle_event.c  lens.c  lens.h  lens_default.c  lens_default.h  lens_enum.c  lens_enum.h  (+37 more)
release/src/router/ltrace/etc/: libacl.so.conf  libc.so-types.conf  libc.so.conf  libm.so.conf  libpthread.so-types.conf  libpthread.so.conf  syscalls.conf
release/src/router/ltrace/sysdeps/: Makefile.am  README  sysdep.h
release/src/router/ltrace/sysdeps/linux-gnu/: Makefile.am  arch_mksyscallent  breakpoint.c  events.c  events.h  hooks.c  mksignalent  mksyscallent  mksyscallent_mips  mksyscallent_s390  os.h  proc.c  trace-defs.h  trace.c  trace.h
release/src/router/ltrace/testsuite/: Makefile.am
release/src/router/ltrace/testsuite/lib/: ltrace.exp
release/src/router/ltrace/testsuite/ltrace.main/: Makefile.am  XDG_CONFIG_DIRS.exp  branch_func.c  branch_func.exp  dwarf.c  dwarf.conf  dwarf.exp  dwarflib.c  dwarflib.h  dwarflib_cxx.cc11  dwarflib_cxx.hh  filters.exp  hello-vfork.c  hello-vfork.exp  main-internal.exp  main-threaded.exp  main-vfork.c  main-vfork.exp  main.exp  parameters-hfa.exp  parameters-lib.c  parameters.c  parameters.conf  parameters.exp  parameters2.exp  parameters3.exp  signals.c  signals.exp  system_call_params.exp  system_calls.exp
release/src/router/ltrace/testsuite/ltrace.minor/: Makefile.am  attach-process-dlopen.exp  attach-process.exp  demangle.exp  libdl-simple.c  libdl-simple.exp  time-record.c  trace-clone.c  trace-exec.exp  trace-fork.c  trace-irelative.exp  wchar.exp
release/src/router/ltrace/testsuite/ltrace.torture/: Makefile.am  arm-singlestep.exp  ia64-sigill.exp  ppc-lwarx.c  ppc-lwarx.exp  signals.c  signals.exp  vfork-thread.c  vfork-thread.exp
(+13601 files in other folders)
